--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Fitness Trakr</title>
+  <title>FitnessTrac.kr</title>
+  <script src="https://kit.fontawesome.com/43aedbe8be.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
